# your-language

./: Cargo.toml  expanded-code.rs  my-research.md  readme.md  todo.md
ast/: Cargo.toml
ast/lib/: Cargo.toml
ast/lib/src/: lib.rs  macros.rs  parser.rs
ast/node-derive/: Cargo.toml
ast/node-derive/src/: err_values.rs  lib.rs  node_enum.rs  token_enum.rs
ast/src/: braced.rs  impl_parse.rs  keyword.rs  lib.rs  node.rs  node_type.rs  nodes.rs  token.rs
ast/src/nodes/: definition.rs  document.rs  eater.rs  identifier.rs  node_block.rs  node_definition.rs  parser.rs  variable_declaration.rs
documentation/: documentation.md  readme.md
documentation/target-syntax/: blockscope.yl  doc.txt  documentation.md  expression.yl  function.yl  main.yl  name.yl  variable.yl
documentation/target-syntax/utils/: variables.yl
fsm/: Cargo.toml
fsm/src/: capture_helpers.rs  context.rs  definitions.rs  edge.rs  fsm.rs  fsm_builder.rs  lib.rs  path.rs  state.rs  state_edge.rs
fsm/src/builder/: fsm_builder.rs  id_gen.rs  mod.rs  state.rs  tracker.rs  tracking_core.rs
fsm/src/factory/: factory.rs  item.rs  mod.rs
fsm/src/machine/: capture_context.rs  capture_helpers.rs  context.rs  (+11 more)
fst/: Cargo.toml
node-derive/: Cargo.toml
node-derive/src/: lib.rs
src/: annotated_lexer.rs  main.rs  node.rs  nodes.rs  parser.rs  token.rs  utils.rs
src/nodes/: document.rs  eater.rs  identifier.rs  keyword.rs  node_block.rs  node_definition.rs  parser.rs  variable_declaration.rs
src/parser/: input_stream.rs  lexer.rs  token.rs
src/parser_for_later/: input_stream.rs  token.rs
(+42 files in other folders)
