[package]
name = "node-derive"
version = "0.1.0"
authors = ["Gerrit Weiermann <gerrit.weiermann@gmx.de>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
syn = "1.0.0"
quote = "1.0"
proc-macro2 = "1.0"
lib = { path = "../lib" }


[lib]
proc-macro = true
